# lockfile

./: .gitignore  CMakeLists.txt  lockfile.c  lockfile.h  main.c  readme.md  serialport.c  serialport.h
cmake/: raspberry-pi.cmake
libserialutils/: CMakeLists.txt
libserialutils/include/: lockfile.h  procutils.h  siot_lockfile.h  siot_procutils.h  siot_serialport.h
libserialutils/src/: lockfile.c  procutils.c  siot_lockfile.c  siot_procutils.c  siot_serialport.c
tests/: CMakeLists.txt
tests/src/: main.c
